fix overflow in mobile interface

--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,8 @@ nav {
 main {
   padding: 50px;
   position: relative;
+  max-width: 100vw;
+  overflow: hidden;
 }
 
 .flex {
